[workspace]
members = ["near-sdk", "near-sdk-macros", "near-contract-standards", "sys"]
exclude = ["examples/"]

# Special triple # comment for ci.
[patch.crates-io]
borsh = { path = "/Users/ihor/borsh-rs/borsh", features = ["derive", "schema"] }
### near-vm-logic = { git = "https://github.com/near/nearcore", branch = "master" }
### near-primitives-core = { git = "https://github.com/near/nearcore", branch = "master" }
